test/elaboration/good/coreml_lambda.mle
let ['a] (id : 'a -> int) = ['a] fun (x : 'a) -> 42