test/elaboration/bad/typeclass_invalid_overloading.mle
class H 'a { h : 'a -> int }
let ['a] [ H 'a ] (x : int) = ['a] 0
